--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta viewport="width=device-width, initial-scale=1">
         <title>
             Samuel
         </title>
