--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         </title>
         <link rel="stylesheet" href="stiles.css">
         <link rel="icon" href="sam.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kalam:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="top">
