Updated a footer link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           
           
           <div class="bottom-container">
-            <a class="footer-link" href="linkedin.com/in/samuel-sokpoli-49736123a" target="_blank">LinkedIn</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/samuel-sokpoli-49736123a/" target="_blank">LinkedIn</a>
             <a class="footer-link" href="https://t.me/brighttday" target="_blank">Telegram</a>
             <a class="footer-link" href="https://www.instagram.com/_perfect.samm_/" target="_blank">Instagram</a>
             <p>©2022 Samuel Johnson.</p>
